--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": [
+		"next/core-web-vitals",
+		"plugin:@maxencebonamy/base",
+		"plugin:@maxencebonamy/typescript",
+		"plugin:@maxencebonamy/react"
+	],
+	"ignorePatterns": [
+		"/lib/components/ui/**/*"
+	]
 }
